syntax = "proto3";

option csharp_namespace = "User_Service.Src.Protos";
import "google/api/annotations.proto";

package Auth;


service AuthProto{
    rpc Register (RegisterUserDto) returns (ResponseRegister){
        option (google.api.http) = {
            post: "/grpc/auth/Register"
            body: "*";
        };
    }

    rpc UpdatePassword (newPassword) returns (ResponsePassword){
        option (google.api.http) = {
            put: "/grpc/auth/UpdatePassword"
            body: "*";
        };
    }
}

message RegisterUserDto{
    string name = 1;
    string firstlastname = 2;
    string secondlastname = 3;
    string rut = 4;
    string email = 5;
    int32 careerId = 6;
    string password = 7;
    string repeatedPassword = 8;
}

message UserRegisterResponse{
    int32 id = 1;
    string Name = 2;
    string FirstLastName = 3;
    string SecondLastName = 4;
    string RUT = 5;
    string Email = 6;
    string RoleName = 7;
    string CareerName = 8;
}

message ResponseRegister{
    UserRegisterResponse user = 1;
    string token = 2;
}

message newPassword{
    string password = 1;
    string repeatedPassword = 2;
    string userId = 3;
}

message ResponsePassword{
    string response = 1;
}
